--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ button {
   background-color: #6E6E6E;
   color: #FFF;
   border-radius: 30px;
+  border-style: none;
   padding: 10px 30px;
   text-transform: uppercase;
   font-weight: 700;
