--- a/style.css
+++ b/style.css
@@ -23,10 +23,13 @@ h1 {
  color: #DD1972;
  font-weight: 300;
  font-size: 4em;
+ text-align: left;
  padding-top: 25px;
  margin: 0;
  text-transform: uppercase;
  line-height: .75;
+ position: relative;
+ right: 4px;
 }
 
 header p {
@@ -37,27 +40,34 @@ header p {
  line-height: .75;
 }
 
+header div {
+  display: block;
+  margin: auto;
+  width: 550px;
+}
+
 /* headlines with lines */
 .decorated{
     overflow: hidden;
-    text-align: center;
 }
-.decorated > span{
+
+.decorated span{
    position: relative;
-   display: inline-block;
+   display: inline;
 }
-.decorated > span:before, .decorated > span:after{
+
+.decorated span:before, .decorated span:after{
    content: '';
    position: absolute;
    top: 50%;
-   border-bottom: 2px solid;
-   width: 27.5%;
+   border-bottom: 2px solid #f7f7f7;
+   width: 100%;
    margin: 0 20px;
 }
-.decorated > span:before{
+.decorated span:before{
    right: 100%;
 }
-.decorated > span:after{
+.decorated span:after{
    left: 100%;
 }
 
