--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,9 @@ p {
 .right {
   width: 50%;
   background-color: #dadada;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
 }
 
 .left {
@@ -69,7 +72,8 @@ input {
   margin-top: 5px;
 }
 
-button {
+button,
+#reset-btn {
   background-color: #6E6E6E;
   color: #FFF;
   border-radius: 30px;
