--- a/css/header.css
+++ b/css/header.css
@@ -1,18 +1,7 @@
 header {
  background-color: #404041;
  text-align: center;
-}
-
-h1 {
- color: #DD1972;
- font-size: 4em;
- text-align: center;
- padding-top: 25px;
- margin: 0;
- text-transform: uppercase;
- line-height: .75;
- position: relative;
- right: 4px;
+ display: flex;
 }
 
 header p {
@@ -23,11 +12,11 @@ header p {
  line-height: .75;
 }
 
-header div {
+/*header div {
   display: block;
   margin: auto;
   width: 550px;
-}
+}*/
 
 /* headlines with lines */
 .decorated{
