--- a/css/score-card.css
+++ b/css/score-card.css
@@ -1,15 +1,10 @@
 #score-card h1 {
-  font-size: 100px;
+  font-size: 6em;
   padding: 10px;
 }
 
 #divider {
   border: 1px solid #D0D2D3;
-}
-
-.challenger-name1,
-.challenger-name2 {
-  color: #6E6E6E;
 }
 
 #guess-result1,
