--- a/css/winner-card.css
+++ b/css/winner-card.css
@@ -38,3 +38,11 @@
 .bottom-line h3 {
   align-self: center;
 }
+
+#card-clear-btn {
+  width: 100px;
+  font-size: 12px;
+  font-weight: 300;
+  align-self: flex-end;
+  margin: 5px 20px 0;
+}
