--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,21 @@ button:active {
   display: none;
 }
 
+.delete-btn {
+  cursor: pointer;
+}
+
+.delete-btn:hover {
+  animation:spin 4s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+#grumpy-kitten {
+  position: fixed;
+}
 
 
 
